// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge bg blue sets background-color and color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #0068ef;
  color: #fff;
  background-color: #0068ef;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge bg green sets background-color and color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #0a0;
  color: #fff;
  background-color: #0a0;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge bg lightBlue sets background-color and color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #e8f2ff;
  color: #049;
  background-color: #e8f2ff;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge bg lightGreen sets background-color and color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #ecf7ec;
  color: #060;
  background-color: #ecf7ec;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge bg lightRed sets background-color and color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #fbebeb;
  color: #800;
  background-color: #fbebeb;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge bg orange sets background-color and color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #f06f20;
  color: #001833;
  background-color: #f06f20;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge bg red sets background-color and color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #c00;
  color: #fff;
  background-color: #c00;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge can escape preset: bg lightBlue sets background-color and color text sets color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #e8f2ff;
  color: #001833;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  color="text"
  size="medium"
/>
`;

exports[`Badge non-preset: bg text sets background-color and color white sets color 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #001833;
  color: #fff;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  color="white"
  size="medium"
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #f4f6f8;
  color: #001833;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Badge renders small 1`] = `
.c0 {
  display: inline-block;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  padding: 3px 3px;
  background-color: #f4f6f8;
  color: #001833;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 9999px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="c0"
  size="small"
/>
`;
